<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OpcionesAdminActivity">

    <include layout="@layout/cabecera"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_titulo"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_tablas"
        android:textSize="25sp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnTablaUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_tablaUsuarios"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/btnTablaComentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_tablaComentarios"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/btnTablaImagenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_tablaImagenes"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/btnTablaPublicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_tablaPublicaciones"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/btnTablaPerfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_tablaPerfiles"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

    </LinearLayout>

</LinearLayout>