<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_titulo"
        android:gravity="center"
        android:textSize="80sp"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/txtLogUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/log_hintUser"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/txtLogPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/log_hintPass"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_login"
            android:textSize="30sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_question"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnIrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_goRegister"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnMostrarAlcances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_goAlcance"
            android:textSize="25sp"
            android:layout_margin="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/mostrarAlcances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

</LinearLayout>